--- a/DataStructure.csproj
+++ b/DataStructure.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DataStructure.Lists.Sorted_Lists.DepartmentList</StartupObject>
+    <StartupObject>DataStructure.Lists.LinkedList</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
     <Compile Include="Array\JaggedArray.cs" />
     <Compile Include="Array\Populate2DArray.cs" />
     <Compile Include="Array\UsingArrays.cs" />
+    <Compile Include="Lists\LinkedList\LinkedList.cs" />
     <Compile Include="Lists\Sorted_Lists\DepartmentList.cs" />
     <Compile Include="Lists\Sorted_Lists\SortedListRunner.cs" />
     <Compile Include="Program.cs" />
@@ -61,8 +62,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lists\Unsorted_Lists\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
