Generic methods class avtivity.

--- a/DataStructure.csproj
+++ b/DataStructure.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DataStructure.Lists.CustomeLinkedListcs</StartupObject>
+    <StartupObject>DataStructure.Generics.ClassActivity</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
     <Compile Include="Array\JaggedArray.cs" />
     <Compile Include="Array\Populate2DArray.cs" />
     <Compile Include="Array\UsingArrays.cs" />
+    <Compile Include="Generics\ClassActivity.cs" />
     <Compile Include="Lists\LinkedList\CustomLinkList\CustomeLinkedListcs.cs" />
     <Compile Include="Lists\LinkedList\CustomLinkList\MyLinkedList.cs" />
     <Compile Include="Lists\LinkedList\LinkedList.cs" />
@@ -64,8 +65,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Generics\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
